@@ -4,6 +4,7 @@ import java.util.HashMap;
 import java.util.List;
 
 import com.google.gwt.core.client.JavaScriptObject;
+import com.google.gwt.dom.client.Element;
 import com.google.gwt.event.shared.EventBus;
 import com.lorepo.icf.scripting.ICommandReceiver;
 import com.lorepo.icf.scripting.IType;
@@ -36,6 +37,7 @@ public class ChoicePresenter implements IPresenter, IStateful, IOptionListener, 
 		public List<IOptionDisplay> getOptions();
 		public void setEnabled(boolean b);
 		public void addListener(IOptionListener listener);
+		public Element getElement();
 	}
 	
 	private IDisplay view;
@@ -367,9 +369,14 @@ public class ChoicePresenter implements IPresenter, IStateful, IOptionListener, 
 		presenter.enable = function(){ 
 			x.@com.lorepo.icplayer.client.module.choice.ChoicePresenter::enable()();
 		}
-			
+		presenter.getView = function() { 
+			return x.@com.lorepo.icplayer.client.module.choice.ChoicePresenter::getView()();
+		}
+		
 		return presenter;
 	}-*/;
 	
-	
+	private Element getView(){
+		return view.getElement();
+	}
 }
