@@ -1,5 +1,6 @@
 package com.lorepo.icplayer.client.module.button.mockup;
 
+import com.google.gwt.dom.client.Element;
 import com.lorepo.icplayer.client.module.button.ButtonModule;
 import com.lorepo.icplayer.client.module.button.ButtonPresenter.IDisplay;
 
@@ -47,5 +48,11 @@ public class ButtonViewMockup implements IDisplay {
 
 	public boolean isDisabled() {
 		return isDisabled;
+	}
+
+	@Override
+	public Element getElement() {
+		// TODO Auto-generated method stub
+		return null;
 	}
 }
